first task done

--- a/css/prepros-6.config
+++ b/css/prepros-6.config
@@ -27,7 +27,6 @@
       "path": "main.scss",
       "imports": [
         "base/normalize.scss",
-        "base/mixins.scss",
         "base/fonts.scss",
         "base/layout.scss",
         "blocks/hero.scss",
@@ -38,7 +37,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
