--- a/css/prepros-6.config
+++ b/css/prepros-6.config
@@ -32,12 +32,13 @@
         "blocks/hero.scss",
         "blocks/best.scss",
         "blocks/reviews.scss",
-        "blocks/header.scss"
+        "blocks/header.scss",
+        "blocks/map.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
