add all sections background

--- a/css/prepros-6.config
+++ b/css/prepros-6.config
@@ -33,7 +33,12 @@
         "blocks/best.scss",
         "blocks/reviews.scss",
         "blocks/header.scss",
-        "blocks/map.scss"
+        "blocks/map.scss",
+        "blocks/slaider.scss",
+        "blocks/team.scss",
+        "blocks/menu.scss",
+        "blocks/work.scss",
+        "blocks/order.scss"
       ]
     }
   ],
